--- a/NnugDemo.Web/Pages/Index.cshtml
+++ b/NnugDemo.Web/Pages/Index.cshtml
@@ -20,5 +20,21 @@
   <component type="typeof(App)" render-mode="ServerPrerendered" />
 
   <script src="_framework/blazor.server.js"></script>
+
+  @*<script>
+    // Wait until a 'reload' button appears
+    new MutationObserver((mutations, observer) => {
+      if (document.querySelector('#components-reconnect-modal h5 a')) {
+        // Now every 5 seconds, see if the server appears to be back, and if so, reload
+        async function attemptReload() {
+          await fetch(''); // Check the server really is back
+          location.reload();
+        }
+        observer.disconnect();
+        attemptReload();
+        setInterval(attemptReload, 5000);
+      }
+    }).observe(document.body, { childList: true, subtree: true });
+  </script>*@
 </body>
 </html>
