--- a/NnugDemo.Web/Components/BookItem.razor
+++ b/NnugDemo.Web/Components/BookItem.razor
@@ -1,7 +1,8 @@
-<li>@Book.Author?.FullName - @Book.Title</li>
+<li>@Book?.Author?.FullName - @Book?.Title</li>
 
 @code {
 
   [Parameter]
-  public Book Book { get; set; }
+  public Book? Book { get; set; }
+
 }
