--- a/NnugDemo.Web/Pages/Index.cshtml
+++ b/NnugDemo.Web/Pages/Index.cshtml
@@ -21,6 +21,15 @@
 
   <script src="_framework/blazor.server.js"></script>
 
+
+
+
+
+  <script>
+    window.add = (a, b) => a + b
+  </script>
+
+
   @*<script>
     // Wait until a 'reload' button appears
     new MutationObserver((mutations, observer) => {
